# cv-drafter

./: .env.example  .gitignore  API.md  DOCS.md  models.py  pyproject.toml
ZZZZ/: README_API_DOCS.md  api_client_example.py  api_quick_reference.sh  checklist.md  commands.md  objective.txt
api/: config.py  server.py
api/models/: requests.py
api/routers/: health.py  sessions.py
api/services/: auth.py  database.py  storage.py
pipeline/: manifest.py  orchestrator.py  paths.py  runner.py  utils.py
pipeline/agents/: __init__.py  compressor.py  content_reviewer.py  cv_extractor.py  cv_tor_mapper.py  fields_generator.py  tor_summarizer.py
pipeline/extractor/: __init__.py  docx_extractor.py  pdf_extractor.py
scripts/: test_extraction.py
templates/: GIZ-Template.docx  WB-Template.docx  __init__.py  giz.py  giz_dynamic_template.py  registry.py  wb.py  wb_dynamic_template.py
